--- a/content/sales_price.html
+++ b/content/sales_price.html
@@ -36,7 +36,7 @@
         </form>
 
         <section class="soldRegisteringNotify">
-          <span class="registeredSoldBooks">You registered the books</span>
+          <span class="registeredSoldBooks"></span>
           <span class="cancelSoldRegistering">This book doesn't exist in the book store!</span>  
 
         </section>
