Just commenting out some stuff.

--- a/content/sales_price.html
+++ b/content/sales_price.html
@@ -17,7 +17,7 @@
         <li><a href="customer.html">Customer Search</a></li>
         <li><a href="delivery.html">Delivery</a></li>
         <li><a href="sales_price.html">Sales & Price Update</a></li>
-        <li><a href="report.html">Report</a></li>
+        <!-- <li><a href="report.html">Report</a></li> -->
       </ul>
     </header>
 
