Final Commit (inlämning)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bookshop</title>
+  <title>Bookstore 6</title>
   
 
   <meta http-equiv="refresh" content="0;URL='content/delivery.html'" />  
